# minecraft_pkm_exe

./: Cargo.toml  README.md  app.manifest  build.rs
.github/workflows/: build-windows-release.yml  build-windows.yml  release.yml
pixelmon-friends-setup/: .gitignore  Cargo.toml  README.md  build.rs
pixelmon-friends-setup/src/: assets.rs  download.rs  gui.rs  hash.rs  java.rs  launcher.rs  launcher_profile.rs  main.rs  manifest.rs  neoforge.rs  optimization.rs  paths.rs  pixelmon.rs  process.rs  server_list.rs  ui_events.rs
scripts/: build_windows.ps1  force_clean_pixelmon_friends.ps1
src/: main.rs
